gestion KO